# Coderz-NMTSAEducationPlatfo

./: .env.example  .env.sample  .gitignore  AUTH0_CALLBACK_FIX.md  AUTH0_CALLBACK_URL_FIX.md  AUTH0_INTEGRATION_SUMMARY.md  AUTH0_QUICK_FIX.md  AUTH0_SETUP_GUIDE.md  AUTH0_TROUBLESHOOTING.md  AUTH0_VISUAL_GUIDE.md  BACKEND_APIS_TO_CREATE.md  BACKEND_API_DOCUMENTATION.md  CHAT_IMPLEMENTATION.md  CHAT_INFO_BOT.md  FRONTEND_BACKEND_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  INTEGRATION_QUICKSTART.md  OAUTH_IMPLEMENTATION.md  OAUTH_QUICKSTART.md  PAYPAL_INTEGRATION.md  PAYPAL_INTEGRATION_SUMMARY.md  PAYPAL_QUICK_TEST.md  PHASES_IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  REGULAR_WEB_APP_AUTH.md  REGULAR_WEB_APP_COMPLETE.md  auto_translate.py  create_admin.py  pyproject.toml  requirements.txt  setup-integration.bat  setup-integration.sh
backend/: AUTHENTICATION_COMPLETE.md  AUTH_SYSTEM_SUMMARY.md  FRONTEND_DOCUMENTATION.md  OAUTH_IMPLEMENTATION.md  SETUP_CHECKLIST.md  SUPERMEMORY_INTEGRATION.md  SUPERMEMORY_QUICKSTART.md  SUPERMEMORY_SIMPLIFIED.md  pyproject.toml  requirements.txt
backend/.github/: copilot-instructions.md
backend/nmtsa_lms/: manage.py  package.json  tailwind.config.js
backend/nmtsa_lms/admin_dash/: api_urls.py  api_views.py  permissions.py  serializers.py  urls.py
backend/nmtsa_lms/api/: serializers.py  urls.py
backend/nmtsa_lms/authentication/: admin.py  admin_views.py  api_urls.py  api_views.py  decorators.py  exceptions.py  models.py  payments.py  permissions.py  serializers.py  urls.py  views.py
(+351 files in other folders)
